samples/_failures_safe/1761526322_d23950_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46e79564.c: In function ‘main’:
./samples/SAFE/__tmp_46e79564.c:130:5: error: ‘free_chunk’ undeclared (first use in this function)
  130 |     free_chunk
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_46e79564.c:130:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_46e79564.c:130:15: error: expected ‘;’ at end of input
  130 |     free_chunk
      |               ^
      |               ;
./samples/SAFE/__tmp_46e79564.c:130:5: error: expected declaration or statement at end of input
  130 |     free_chunk
      |     ^~~~~~~~~~
